@startuml

title __DRAWTOOL's Class Diagram__\n

  namespace com.ustc.location {
    namespace drawtool {
      class com.ustc.location.drawtool.DrawEvent {
          {static} + DRAW_END : int
          - drawGrahic : Graphic
          {static} - serialVersionUID : long
          - type : int
          + DrawEvent()
          + getDrawGraphic()
          + getType()
      }
    }
  }
  

  namespace com.ustc.location {
    namespace drawtool {
      interface com.ustc.location.drawtool.DrawEventListener {
          {abstract} + handleDrawEvent()
      }
    }
  }
  

  namespace com.ustc.location {
    namespace drawtool {
      class com.ustc.location.drawtool.DrawTool {
          {static} + CIRCLE : int
          {static} + ELLIPSE : int
          {static} + ENVELOPE : int
          {static} + FREEHAND_POLYGON : int
          {static} + FREEHAND_POLYLINE : int
          {static} + POINT : int
          {static} + POLYGON : int
          {static} + POLYLINE : int
          + drawGraphic : Graphic
          + markerSymbol : MarkerSymbol
          + point : Point
          + tempLayer : GraphicsLayer
          - active : boolean
          - beginIdx : int
          - ctx : AppCompatActivity
          - defaultListener : MapOnTouchListener
          - drawLayer : GraphicsLayer
          - drawType : int
          - endIdx : int
          - envelope : Envelope
          - fillSymbol : FillSymbol
          - graphicID : int
          - lineSymbol : LineSymbol
          - mapView : MapView
          - polygon : Polygon
          - polyline : Polyline
          - route : Vector<Integer>
          - startPoint : Point
          + DrawTool()
          + activate()
          + deactivate()
          + sendDrawEndEvent()
          + setBeginIdx()
          + setNaviTool()
      }
    }
  }
  

  namespace com.ustc.location {
    namespace drawtool {
      class com.ustc.location.drawtool.DrawTool.DrawTouchListener {
          + DrawTouchListener()
          + onSingleTap()
      }
    }
  }
  

  namespace com.ustc.location {
    namespace drawtool {
      class com.ustc.location.drawtool.Subject {
          - repository : Vector<DrawEventListener>
          + addEventListener()
          + notifyEvent()
          + removeEventListener()
      }
    }
  }
  

  com.ustc.location.drawtool.DrawEvent -up-|> java.util.EventObject
  com.ustc.location.drawtool.DrawTool -up-|> com.ustc.location.drawtool.Subject
  com.ustc.location.drawtool.DrawTool o-- com.ustc.location.drawtool.DrawTool.DrawTouchListener : drawListener
  com.ustc.location.drawtool.DrawTool o-- com.ustc.location.navitool.NaviTool : naviTool
  com.ustc.location.drawtool.DrawTool +-down- com.ustc.location.drawtool.DrawTool.DrawTouchListener
  com.ustc.location.drawtool.DrawTool.DrawTouchListener -up-|> com.esri.android.map.MapOnTouchListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
